# google-fonts-skill

./: .gitignore  README.md  community-announcement.md  dubbakurr  pyproject.toml  test1
.github/workflows/: pages.yml  publish.yml
registry/: awesome-mcp-servers.md  mcp-hub.json  smithery.yaml
scripts/: core.py  generate-css.py  generate-llms-full.py  generate-og-images.py  generate-showcase.py
showcase/: index.html  llms-full.txt  llms.txt  robots.txt  showcase.json  sitemap.xml
showcase/pages/: aether-analytics.html  anthem-brands.html  aperture-design.html  apex-ventures.html  archway-platform.html  atelier-blanc.html  atheneum-collection.html  atlas-consulting.html  basecamp-metrics.html  beacon-data.html  blackstone-digital.html  bloom-wellness.html  breathe-studio.html  bright-minds-academy.html  campfire-workspace.html  canopy-cloud.html  cascade-flow.html  catalyst-group.html  ch-teau-blanc.html  chromatic-studio.html  circuit-logic.html  clearpath-dashboard.html  cobalt-scheduler.html  conduit-ai.html  contrast-works.html  copper-market.html  cornerstone-partners.html  curiosity-lab.html  darkroom-portfolio.html  daybreak-stories.html  devdocs-hub.html  drift-insights.html  ember-vine.html  folio-works.html  forge-flame.html  fulcrum-dashboard.html  gilt-grace.html  gradient-metrics.html  grain-grit.html  half-light-journal.html  (+60 more)
src/google_fonts_mcp/: __init__.py  core.py  server.py
tests/: test_core.py  test_server.py
